--- a/src/index.pug
+++ b/src/index.pug
@@ -8,6 +8,8 @@ html(lang="en")
         title Document
     body 
         .wrapper 
+            include components/top 
+            +top 
             include components/header 
             +header 
             include components/footer 
