--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -4,12 +4,33 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
+        @include media(768){
+            flex-direction: column;
+        }
+    }
+    &__logo{
+        @include media(992){
+            width: 147px;
+        }
+        @include media(768){
+            width: 250px;
+            margin-bottom: 15px;
+        }
+        img{
+            width: 100%;
+        }
     }
     &__adresses{
         display: flex;
         flex-direction: column;
         align-items: flex-start;
         row-gap: 9px;
+        @include media(768){
+            order: 5;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
     }
     &__adress{
         display: flex;
@@ -19,11 +40,38 @@
         font-size: 16.0174px;
         line-height: 22px;
         color: #4B4A53;
+        @include media(992){
+            column-gap: 5px;
+            font-weight: 400;
+            font-size: 10px;
+            line-height: 13px;
+        }
+        @include media(768){
+            font-size: 17px;
+            line-height: 22px;
+        }
+        img{
+            @include media(992){
+                width: 8px;
+            }
+        }
     }
     &__order{     
         display: flex;
         align-items: flex-start;
         column-gap: 5px;
+        @include media(768){
+            align-items: center;
+            margin-bottom: 10px;
+        }
+        img{
+            @include media(992){
+                width: 10px;
+            }
+            @include media(768){
+                width: 20px;
+            }
+        }
         a{     
             font-weight: 400;
             font-size: 17px;
@@ -31,6 +79,17 @@
             color: #4B4A53;   
             padding-bottom: 5px;
             border-bottom: 2px dotted #4B4A53;
+            @include media(992){
+                font-weight: 400;
+                font-size: 12px;
+                line-height: 13px;
+                padding-bottom: 2px;
+            }
+            @include media(768){
+                font-weight: 400;
+                font-size: 17px;
+                line-height: 22px;
+            }
         }
     }
     &__phone{
@@ -41,6 +100,17 @@
         line-height: 38px;
         text-align: right;
         color: #E23E8F;
+        @include media(992){
+            font-weight: 400;
+            font-size: 18px;
+            line-height: 22px;
+        }
+        @include media(768){
+            font-weight: 400;
+            font-size: 40px;
+            line-height: 50px;
+            margin-bottom: 10px;
+        }
     }
     &__list{
         display: flex;
