--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -123,12 +123,26 @@
         height: 60px;
         padding-left: 0;
         padding-right: 0;
+        margin-bottom: 25px;
+        @include media(992){
+            height: 35px;
+            margin-bottom: 15px;
+        }
+        @include media(768){
+            display: none;
+        }
     }
     &__li{
         height: 100%;
         &:nth-of-type(1){
             .header__link{
                 padding-left: 30px;
+                @include media(1200){
+                    padding-left: 27px;
+                }
+                @include media(992){
+                    padding-left: 20px;
+                }
                 &.active,
                 &:hover{
                     background: #E23E8F;
@@ -139,6 +153,9 @@
         &:nth-of-type(7){
             .header__link{
                 padding-right: 31px;
+                @include media(992){
+                    padding-right: 20px;
+                }
                 &.active,
                 &:hover{
                     background: #E23E8F;
@@ -160,9 +177,36 @@
         height: 100%;
         padding-right: 35px;
         padding-left: 20px;
+        @include media(1200){
+            padding-right: 17px;
+            padding-left: 12px;
+        }
+        @include media(992){
+            font-size: 10px;
+            line-height: 13px;
+            column-gap: 3px;
+            padding-right: 14px;
+            padding-left: 14px;
+        }
+        img{
+            @include media(992){
+                width: 15px;
+            }
+        }
         &.active,
         &:hover{
             background: #E23E8F;
+        }
+    }
+    &__img{
+        width: 100%;
+        padding-right: 0;
+        padding-left: 0;
+        @include media(768){
+            display: none;
+        }
+        img{
+            width: 100%;
         }
     }
 }
