--- a/src/components/header.pug
+++ b/src/components/header.pug
@@ -11,18 +11,20 @@ mixin header()
                 a(href="#!") ЗАКАЗАТЬ БУКЕТ 
                 img(src="@img/header-buket.svg", alt="" draggable="false" loading="lazy")
             a(href="tel::8(999)111-22-33").header__phone 8 (999) 111-22-33
-        //- .header__list.container 
-        //-     li.header__li 
-        //-         a(href="#!").header__link.active #[img(src="@img/top-icon-1.svg", alt="" draggable="false" loading="lazy")] Букеты
-        //-     li.header__li 
-        //-         a(href="#!").header__link #[img(src="@img/top-icon-2.svg", alt="" draggable="false" loading="lazy")] Корзины
-        //-     li.header__li 
-        //-         a(href="#!").header__link #[img(src="@img/top-icon-3.svg", alt="" draggable="false" loading="lazy")] В коробке
-        //-     li.header__li 
-        //-         a(href="#!").header__link #[img(src="@img/top-icon-4.svg", alt="" draggable="false" loading="lazy")] Свадьбы
-        //-     li.header__li 
-        //-         a(href="#!").header__link #[img(src="@img/top-icon-5.svg", alt="" draggable="false" loading="lazy")] Шар
-        //-     li.header__li 
-        //-         a(href="#!").header__link #[img(src="@img/top-icon-6.svg", alt="" draggable="false" loading="lazy")] О нас
-        //-     li.header__li 
-        //-         a(href="#!").header__link #[img(src="@img/top-icon-7.svg", alt="" draggable="false" loading="lazy")] Контакты
+        .header__list.container 
+            li.header__li 
+                a(href="#!").header__link.active #[img(src="@img/top-icon-1.svg", alt="" draggable="false" loading="lazy")] Букеты
+            li.header__li 
+                a(href="#!").header__link #[img(src="@img/top-icon-2.svg", alt="" draggable="false" loading="lazy")] Корзины
+            li.header__li 
+                a(href="#!").header__link #[img(src="@img/top-icon-3.svg", alt="" draggable="false" loading="lazy")] В коробке
+            li.header__li 
+                a(href="#!").header__link #[img(src="@img/top-icon-4.svg", alt="" draggable="false" loading="lazy")] Свадьбы
+            li.header__li 
+                a(href="#!").header__link #[img(src="@img/top-icon-5.svg", alt="" draggable="false" loading="lazy")] Шар
+            li.header__li 
+                a(href="#!").header__link #[img(src="@img/top-icon-6.svg", alt="" draggable="false" loading="lazy")] О нас
+            li.header__li 
+                a(href="#!").header__link #[img(src="@img/top-icon-7.svg", alt="" draggable="false" loading="lazy")] Контакты
+        .header__img.container 
+            img(src="@img/header-img.png", alt="" draggable="false" loading="lazy")
