--- a/src/scss/layout/_top.scss
+++ b/src/scss/layout/_top.scss
@@ -104,7 +104,6 @@
         left: 0;
         width: 100%;
         background: rgba(92, 82, 105, 0.9);
-        padding-bottom: 10px;
         border-radius: 0 0 20px 20px;
         opacity: 0;
         visibility: hidden;
@@ -133,6 +132,11 @@
     }
     &__li{
         width: 100%;
+        &:nth-of-type(7){
+            .top__link{
+                border-radius: 0 0 15px 15px;
+            }
+        }
     }
     &__link{
         min-width: 150px;
