--- a/src/index.pug
+++ b/src/index.pug
@@ -13,6 +13,8 @@ html(lang="en")
                 +top 
                 include components/header 
                 +header 
+                include components/bests 
+                +bests 
             include components/footer 
             +footer
         script(src="js/app.min.js") 
