--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -26,7 +26,8 @@
     'layout/footer',
     'layout/sidebar',
     'layout/forms',
-    'layout/top';
+    'layout/top',
+    'layout/bests';
 
 // components
 @import 
