--- a/src/components/bests.pug
+++ b/src/components/bests.pug
@@ -4,4 +4,64 @@ mixin bests()
             h2.bests__title.title #[span Site.com] – все лучшее для Вас!
             .bests__content 
                 .bests__item 
-                
+                    .bests__img 
+                        img(src="@img/bests-img.png", alt="" draggable="false" loading="lazy")
+                    p.bests__subtitle №4 - 2 700 руб.
+                    p.bests__desc Корзина с розами, статицей,кустовыми розами, гвоздикойи сезонными вставками
+                .bests__item 
+                    .bests__img 
+                        img(src="@img/bests-img.png", alt="" draggable="false" loading="lazy")
+                    p.bests__subtitle №4 - 2 700 руб.
+                    p.bests__desc Корзина с розами, статицей,кустовыми розами, гвоздикойи сезонными вставками
+                .bests__item 
+                    .bests__img 
+                        img(src="@img/bests-img.png", alt="" draggable="false" loading="lazy")
+                    p.bests__subtitle №4 - 2 700 руб.
+                    p.bests__desc Корзина с розами, статицей,кустовыми розами, гвоздикойи сезонными вставками
+                .bests__item 
+                    .bests__img 
+                        img(src="@img/bests-img.png", alt="" draggable="false" loading="lazy")
+                    p.bests__subtitle №4 - 2 700 руб.
+                    p.bests__desc Корзина с розами, статицей,кустовыми розами, гвоздикойи сезонными вставками
+                .bests__item 
+                    .bests__img 
+                        img(src="@img/bests-img.png", alt="" draggable="false" loading="lazy")
+                    p.bests__subtitle №4 - 2 700 руб.
+                    p.bests__desc Корзина с розами, статицей,кустовыми розами, гвоздикойи сезонными вставками
+                .bests__item 
+                    .bests__img 
+                        img(src="@img/bests-img.png", alt="" draggable="false" loading="lazy")
+                    p.bests__subtitle №4 - 2 700 руб.
+                    p.bests__desc Корзина с розами, статицей,кустовыми розами, гвоздикойи сезонными вставками
+                .bests__item 
+                    .bests__img 
+                        img(src="@img/bests-img.png", alt="" draggable="false" loading="lazy")
+                    p.bests__subtitle №4 - 2 700 руб.
+                    p.bests__desc Корзина с розами, статицей,кустовыми розами, гвоздикойи сезонными вставками
+                .bests__item 
+                    .bests__img 
+                        img(src="@img/bests-img.png", alt="" draggable="false" loading="lazy")
+                    p.bests__subtitle №4 - 2 700 руб.
+                    p.bests__desc Корзина с розами, статицей,кустовыми розами, гвоздикойи сезонными вставками
+            .bests__content 
+                .bests__item 
+                    .bests__img 
+                        img(src="@img/bests-img.png", alt="" draggable="false" loading="lazy")
+                    p.bests__subtitle №4 - 2 700 руб.
+                    p.bests__desc Корзина с розами, статицей,кустовыми розами, гвоздикойи сезонными вставками
+                .bests__item 
+                    .bests__img 
+                        img(src="@img/bests-img.png", alt="" draggable="false" loading="lazy")
+                    p.bests__subtitle №4 - 2 700 руб.
+                    p.bests__desc Корзина с розами, статицей,кустовыми розами, гвоздикойи сезонными вставками
+                .bests__item 
+                    .bests__img 
+                        img(src="@img/bests-img.png", alt="" draggable="false" loading="lazy")
+                    p.bests__subtitle №4 - 2 700 руб.
+                    p.bests__desc Корзина с розами, статицей,кустовыми розами, гвоздикойи сезонными вставками
+                .bests__item 
+                    .bests__img 
+                        img(src="@img/bests-img.png", alt="" draggable="false" loading="lazy")
+                    p.bests__subtitle №4 - 2 700 руб.
+                    p.bests__desc Корзина с розами, статицей,кустовыми розами, гвоздикойи сезонными вставками
+            a(href="#!").bests__btn.btn ПОКАЗАТЬ БОЛЬШЕ
