--- a/src/components/bests.pug
+++ b/src/components/bests.pug
@@ -6,62 +6,41 @@ mixin bests()
                 .bests__item 
                     .bests__img 
                         img(src="@img/bests-img.png", alt="" draggable="false" loading="lazy")
-                    p.bests__subtitle №4 - 2 700 руб.
-                    p.bests__desc Корзина с розами, статицей,кустовыми розами, гвоздикойи сезонными вставками
+                    p.bests__subtitle №4 - #[span 2 700 руб.]
+                    p.bests__desc Корзина с розами, статицей, #[br] кустовыми розами, гвоздикойи сезонными вставками
                 .bests__item 
                     .bests__img 
                         img(src="@img/bests-img.png", alt="" draggable="false" loading="lazy")
-                    p.bests__subtitle №4 - 2 700 руб.
-                    p.bests__desc Корзина с розами, статицей,кустовыми розами, гвоздикойи сезонными вставками
+                    p.bests__subtitle №4 - #[span 2 700 руб.]
+                    p.bests__desc Корзина с розами, статицей, #[br] кустовыми розами, гвоздикойи сезонными вставками
                 .bests__item 
                     .bests__img 
                         img(src="@img/bests-img.png", alt="" draggable="false" loading="lazy")
-                    p.bests__subtitle №4 - 2 700 руб.
-                    p.bests__desc Корзина с розами, статицей,кустовыми розами, гвоздикойи сезонными вставками
+                    p.bests__subtitle №4 - #[span 2 700 руб.]
+                    p.bests__desc Корзина с розами, статицей, #[br] кустовыми розами, гвоздикойи сезонными вставками
                 .bests__item 
                     .bests__img 
                         img(src="@img/bests-img.png", alt="" draggable="false" loading="lazy")
-                    p.bests__subtitle №4 - 2 700 руб.
-                    p.bests__desc Корзина с розами, статицей,кустовыми розами, гвоздикойи сезонными вставками
+                    p.bests__subtitle №4 - #[span 2 700 руб.]
+                    p.bests__desc Корзина с розами, статицей, #[br] кустовыми розами, гвоздикойи сезонными вставками
                 .bests__item 
                     .bests__img 
                         img(src="@img/bests-img.png", alt="" draggable="false" loading="lazy")
-                    p.bests__subtitle №4 - 2 700 руб.
-                    p.bests__desc Корзина с розами, статицей,кустовыми розами, гвоздикойи сезонными вставками
+                    p.bests__subtitle №4 - #[span 2 700 руб.]
+                    p.bests__desc Корзина с розами, статицей, #[br] кустовыми розами, гвоздикойи сезонными вставками
                 .bests__item 
                     .bests__img 
                         img(src="@img/bests-img.png", alt="" draggable="false" loading="lazy")
-                    p.bests__subtitle №4 - 2 700 руб.
-                    p.bests__desc Корзина с розами, статицей,кустовыми розами, гвоздикойи сезонными вставками
+                    p.bests__subtitle №4 - #[span 2 700 руб.]
+                    p.bests__desc Корзина с розами, статицей, #[br] кустовыми розами, гвоздикойи сезонными вставками
                 .bests__item 
                     .bests__img 
                         img(src="@img/bests-img.png", alt="" draggable="false" loading="lazy")
-                    p.bests__subtitle №4 - 2 700 руб.
-                    p.bests__desc Корзина с розами, статицей,кустовыми розами, гвоздикойи сезонными вставками
+                    p.bests__subtitle №4 - #[span 2 700 руб.]
+                    p.bests__desc Корзина с розами, статицей, #[br] кустовыми розами, гвоздикойи сезонными вставками
                 .bests__item 
                     .bests__img 
                         img(src="@img/bests-img.png", alt="" draggable="false" loading="lazy")
-                    p.bests__subtitle №4 - 2 700 руб.
-                    p.bests__desc Корзина с розами, статицей,кустовыми розами, гвоздикойи сезонными вставками
-            .bests__content 
-                .bests__item 
-                    .bests__img 
-                        img(src="@img/bests-img.png", alt="" draggable="false" loading="lazy")
-                    p.bests__subtitle №4 - 2 700 руб.
-                    p.bests__desc Корзина с розами, статицей,кустовыми розами, гвоздикойи сезонными вставками
-                .bests__item 
-                    .bests__img 
-                        img(src="@img/bests-img.png", alt="" draggable="false" loading="lazy")
-                    p.bests__subtitle №4 - 2 700 руб.
-                    p.bests__desc Корзина с розами, статицей,кустовыми розами, гвоздикойи сезонными вставками
-                .bests__item 
-                    .bests__img 
-                        img(src="@img/bests-img.png", alt="" draggable="false" loading="lazy")
-                    p.bests__subtitle №4 - 2 700 руб.
-                    p.bests__desc Корзина с розами, статицей,кустовыми розами, гвоздикойи сезонными вставками
-                .bests__item 
-                    .bests__img 
-                        img(src="@img/bests-img.png", alt="" draggable="false" loading="lazy")
-                    p.bests__subtitle №4 - 2 700 руб.
-                    p.bests__desc Корзина с розами, статицей,кустовыми розами, гвоздикойи сезонными вставками
+                    p.bests__subtitle №4 - #[span 2 700 руб.]
+                    p.bests__desc Корзина с розами, статицей, #[br] кустовыми розами, гвоздикойи сезонными вставками
             a(href="#!").bests__btn.btn ПОКАЗАТЬ БОЛЬШЕ
