--- a/src/index.pug
+++ b/src/index.pug
@@ -13,6 +13,7 @@ html(lang="en")
                 +top 
                 include components/header 
                 +header 
+            .main
                 include components/bests 
                 +bests 
             include components/footer 
