--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -1,5 +1,8 @@
 .header{
-    padding: 15px 0;
+    padding: 30px 0;
+    @include media(992){
+        padding: 20px 0;
+    }
     &__nav{
         display: flex;
         justify-content: space-between;
