--- a/src/components/bests.pug
+++ b/src/components/bests.pug
@@ -33,12 +33,12 @@ mixin bests()
                         img(src="@img/bests-img.png", alt="" draggable="false" loading="lazy")
                     p.bests__subtitle №4 - #[span 2 700 руб.]
                     p.bests__desc Корзина с розами, статицей, #[br] кустовыми розами, гвоздикойи сезонными вставками
-                .bests__item 
+                .bests__item.disable-md 
                     .bests__img 
                         img(src="@img/bests-img.png", alt="" draggable="false" loading="lazy")
                     p.bests__subtitle №4 - #[span 2 700 руб.]
                     p.bests__desc Корзина с розами, статицей, #[br] кустовыми розами, гвоздикойи сезонными вставками
-                .bests__item 
+                .bests__item.disable-md 
                     .bests__img 
                         img(src="@img/bests-img.png", alt="" draggable="false" loading="lazy")
                     p.bests__subtitle №4 - #[span 2 700 руб.]
