--- a/src/scss/themes/_theme.scss
+++ b/src/scss/themes/_theme.scss
@@ -48,6 +48,14 @@ li{
     line-height: 60px;
     text-align: center;
     color: #4B4A53;
+    @include media(992){
+        font-size: 28px;
+        line-height: 35px;
+    }
+    @include media(768){
+        font-size: 20px;
+        line-height: 25px;
+    }
     span{
         font-family: Lobster;
         font-style: normal;
@@ -56,6 +64,14 @@ li{
         line-height: 60px;
         text-align: center;
         color: #E23E8F;
+        @include media(992){
+            font-size: 28px;
+            line-height: 35px;
+        }
+        @include media(768){
+            font-size: 20px;
+            line-height: 25px;
+        }
     }
 }
 .btn{
@@ -65,7 +81,6 @@ li{
     text-align: center;
     color: #FFFFFF;
     background: #E23E8F;
-    border: 5px solid rgba(226, 62, 143, 0.5);
     width: 356px;
     height: 64px;
     border-radius: 100px;
@@ -74,4 +89,30 @@ li{
     align-items: center;
     margin-left: auto;
     margin-right: auto;
+    position: relative;
+    transition: 300ms ease;
+    @include media(992){
+        font-size: 10px;
+        line-height: 13px;
+        width: 205px;
+        height: 36px;
+    }
+    @include media(768){
+        font-size: 16px;
+        line-height: 22px;
+        width: 291px;
+        height: 52px;
+    }
+    &:hover{
+        background: lighten($color: #E23E8F, $amount: 4);
+    }
+    &::before{
+        content: '';
+        position: absolute;
+        width: calc(100% + 10px);
+        height: calc(100% + 10px);
+        background: rgba(226, 62, 143, 0.5);
+        z-index: -1;
+        border-radius: 100px;
+    }
 }
