--- a/src/index.pug
+++ b/src/index.pug
@@ -16,6 +16,8 @@ html(lang="en")
             .main
                 include components/bests 
                 +bests 
+                include components/clients 
+                +clients 
             include components/footer 
             +footer
         script(src="js/app.min.js") 
