--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -27,7 +27,8 @@
     'layout/sidebar',
     'layout/forms',
     'layout/top',
-    'layout/bests';
+    'layout/bests',
+    'layout/clients';
 
 // components
 @import 
