--- a/src/components/clients.pug
+++ b/src/components/clients.pug
@@ -2,6 +2,24 @@ mixin clients()
     section.section.clients 
         .clients__body.container 
             h2.clients__title.title Наши #[span Клиенты]
-            .clients__content 
-                .clients__img 
-                    
+            .clients__slider 
+                .clients__swiper.swiper 
+                    .clients__swiper-wrapper.swiper-wrapper 
+                        .clients__slide.swiper-slide 
+                            .clients__img 
+                                img(src="@img/clients-img-1.png", alt="" draggable="false" loading="lazy")
+                        .clients__slide.swiper-slide 
+                            .clients__img 
+                                img(src="@img/clients-img-2.png", alt="" draggable="false" loading="lazy")
+                        .clients__slide.swiper-slide 
+                            .clients__img 
+                                img(src="@img/clients-img-3.png", alt="" draggable="false" loading="lazy")
+                        .clients__slide.swiper-slide 
+                            .clients__img 
+                                img(src="@img/clients-img-4.png", alt="" draggable="false" loading="lazy")
+                        .clients__slide.swiper-slide 
+                            .clients__img 
+                                img(src="@img/clients-img-5.png", alt="" draggable="false" loading="lazy")
+                        .clients__slide.swiper-slide 
+                            .clients__img 
+                                img(src="@img/clients-img-6.png", alt="" draggable="false" loading="lazy")
