--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -28,7 +28,8 @@
     'layout/forms',
     'layout/top',
     'layout/bests',
-    'layout/clients';
+    'layout/clients',
+    'layout/products';
 
 // components
 @import 
