--- a/src/index.pug
+++ b/src/index.pug
@@ -17,7 +17,9 @@ html(lang="en")
                 include components/bests 
                 +bests 
                 include components/clients 
-                +clients 
+                +clients  
+                include components/products 
+                +products 
             include components/footer 
             +footer
         script(src="js/app.min.js") 
