--- a/src/scss/layout/_products.scss
+++ b/src/scss/layout/_products.scss
@@ -1,33 +1,15 @@
-.bests{
-    padding-bottom: 60px;
+.products{
+    padding-bottom: 120px;
     @include media(992){
-        padding-bottom: 37px;
-    }
-    @include media(768){
-        padding-bottom: 25px;
+        padding-bottom: 65px;
     }
     &__title{
         margin-bottom: 45px;
         @include media(992){
             margin-bottom: 25px;
-            font-size: 28px;
-            line-height: 35px;
         }
-        @include media(768){
+        @include media(767){
             margin-bottom: 20px;
-            text-transform: lowercase;
-            font-size: 20px;
-            line-height: 25px;
-        }
-        span{
-            @include media(992){
-                font-size: 28px;
-                line-height: 35px;
-            }
-            @include media(768){
-                font-size: 20px;
-                line-height: 25px;
-            }
         }
     }
     &__content{
