--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -29,7 +29,8 @@
     'layout/top',
     'layout/bests',
     'layout/clients',
-    'layout/products';
+    'layout/products',
+    'layout/presents';
 
 // components
 @import 
