--- a/src/index.pug
+++ b/src/index.pug
@@ -20,6 +20,8 @@ html(lang="en")
                 +clients  
                 include components/products 
                 +products 
+                include components/presents 
+                +presents 
             include components/footer 
             +footer
         script(src="js/app.min.js") 
