--- a/src/index.pug
+++ b/src/index.pug
@@ -22,6 +22,8 @@ html(lang="en")
                 +products 
                 include components/presents 
                 +presents 
+                include components/offers 
+                +offers 
             include components/footer 
             +footer
         script(src="js/app.min.js") 
