--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -30,7 +30,8 @@
     'layout/bests',
     'layout/clients',
     'layout/products',
-    'layout/presents';
+    'layout/presents',
+    'layout/offers';
 
 // components
 @import 
