--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -31,7 +31,8 @@
     'layout/clients',
     'layout/products',
     'layout/presents',
-    'layout/offers';
+    'layout/offers',
+    'layout/adress';
 
 // components
 @import 
