--- a/src/index.pug
+++ b/src/index.pug
@@ -23,7 +23,9 @@ html(lang="en")
                 include components/presents 
                 +presents 
                 include components/offers 
-                +offers 
+                +offers
+                include components/adress 
+                +adress 
             include components/footer 
             +footer
         script(src="js/app.min.js") 
