--- a/src/components/footer.pug
+++ b/src/components/footer.pug
@@ -1,2 +1,19 @@
 mixin footer()
     footer.footer
+        .footer__body.container 
+            .header__list
+                li.header__li 
+                    a(href="#!").header__link.active #[img(src="@img/top-icon-1.svg", alt="" draggable="false" loading="lazy")] Букеты
+                li.header__li 
+                    a(href="#!").header__link #[img(src="@img/top-icon-2.svg", alt="" draggable="false" loading="lazy")] Корзины
+                li.header__li 
+                    a(href="#!").header__link #[img(src="@img/top-icon-3.svg", alt="" draggable="false" loading="lazy")] В коробке
+                li.header__li 
+                    a(href="#!").header__link #[img(src="@img/top-icon-4.svg", alt="" draggable="false" loading="lazy")] Свадьбы
+                li.header__li 
+                    a(href="#!").header__link #[img(src="@img/top-icon-5.svg", alt="" draggable="false" loading="lazy")] Шар
+                li.header__li 
+                    a(href="#!").header__link #[img(src="@img/top-icon-6.svg", alt="" draggable="false" loading="lazy")] О нас
+                li.header__li 
+                    a(href="#!").header__link #[img(src="@img/top-icon-7.svg", alt="" draggable="false" loading="lazy")] Контакты
+            p.footer__p © 2017-2022 МИР ЦВЕТОВ Москва
