--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -1,1 +1,41 @@
-// Футер
+.footer{
+    padding-bottom: 58px;
+    position: relative;
+    &::before{
+        content: '';
+        position: absolute;
+        height: 450px;
+        width: 100%;
+        background: url(../img/footer-bg.svg) bottom / cover no-repeat;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        @include media(1600){
+            display: none;
+        }
+    }
+    @include media(992){
+        padding-bottom: 15px;
+    }
+    @include media(768){
+        padding-bottom: 25px;
+        text-align: center;
+    }
+    &__body{
+        padding-left: 0;
+        padding-right: 0;
+    }
+    &__p{
+        margin-top: 22px;
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 22px;
+        color: #4B4A53;
+        @include media(992){
+            margin-top: 12px;
+        }
+        @include media(768){
+            margin-top: 25px;
+        }
+    }
+}
